2013-08-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-stream-file.c (g_mime_stream_file_new_for_path): New
	convenience function that handles opening the file for you.

	* gmime/gmime-stream-fs.c (g_mime_stream_fs_new_for_path): New
	convenience function that handles opening the file for you.

2013-08-11  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (g_mime_message_set_reply_to): Fixed this
	function to parse the reply_to string just like
	g_mime_message_set_sender() does so that the reply_to field can be
	guaranteed to be in UTF-8.

	* gmime/*.c: Updated API documentation for functions taking or
	returning strings to clarify whether the strings should be in
	UTF-8 or not.

2013-08-10  Jeffrey Stedfast  <fejj@gnome.org>

	* mono/GMime.metadata: Various fixups to get rid of warnings.

	* gmime/gmime.c (g_mime_init): Don't call g_type_init() if glib >=
	2.35.1

2013-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/internet-address.c (decode_address): Properly deal with
	obsolete routing information.

2013-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.17

2013-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_content_type): If no Content-Type
	header exists and the parent is a multipart/digest, default to
	message/rfc822 instead of text/plain.
	(parser_construct_leaf_part): If the Content-Type header didn't
	exist, use the default content-type values instead of assuming
	text/plain.

2013-08-07  Jeffrey Stedfast  <fejj@gnome.org>

	According to Rfc2046 Section 5.1.1, boundary markers may optionally
	be followed by lwsp.

	* gmime/gmime-parser.c (is_boundary): New convenience function to
	check that the text matches a boundary, possibly followed by lwsp.
	(check_boundary): Use is_boundary().
	(found_immediate_boundary): Use is_boundary().

	Fixes bug #705612

2013-07-02  Jeffrey Stedfast  <fejj@gnome.org>
