@@ -1,3 +1,8 @@
+2013-08-14  Jeffrey Stedfast  <fejj@gnome.org>
+
+	* gmime/gmime-filter-html.c (citation_depth): Fixed an ABR by
+	passing in an inend parameter.
+
 2013-08-12  Jeffrey Stedfast  <fejj@gnome.org>
 
 	* gmime/gmime-stream-file.c (g_mime_stream_file_new_for_path): New
